--- a/client/src/pages/Ramos_Electivos/Nolineal-EDP/Intro-ptocrit.html
+++ b/client/src/pages/Ramos_Electivos/Nolineal-EDP/Intro-ptocrit.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introducción	 a	 la	 Teoría	 de	 Puntos	
-Críticos | Red For U</title>
+    <title>Introducción a la Teoría de Puntos Críticos | Red For U</title>
     <link rel="stylesheet" href="../../../assets/styles.css">
     <link rel="stylesheet" href="../../../assets/contenedor.css">
 </head>
@@ -20,13 +19,13 @@ Críticos | Red For U</title>
                 <li><a href="../../../index.html">Inicio</a></li>
                 <li><a href="../../Malla.html">Malla Interactiva</a></li>
                 <li><a href="../../pages/notas.html">Notas</a></li>
-                <li><a href="../..electivos.html">Electivos</a></li>
+                <li><a href="../../electivos.html">Electivos</a></li>
                 <li><a href="../../lineas.html">Líneas de Investigación</a></li>
                 <li><a href="../../repositorios.html">Repositorios</a></li>
                 <li><a href="../../guias.html">Guías</a></li>
                 <li><a href="../../Sala.html">Sala Matemática</a></li>
                 <li><a href="../../CEEMAT.html">CEEMAT</a></li>
-                <li class="cart-link"><a href="Perfil.html"> Perfil </a></li>
+                <li class="cart-link"><a href="Perfil.html">Perfil</a></li>
             </ul>
         </nav>
     </header>
@@ -34,8 +33,7 @@ Críticos | Red For U</title>
 <main>
     <section class="hero-slider2">
         <div class="hero-slide active">
-            <h2>Introducción	 a	 la	 Teoría	 de	 Puntos	
-Críticos</h2>
+            <h2>Introducción a la Teoría de Puntos Críticos</h2>
             <p>MAT-475 | 8 Créditos SCT (4 UTFSM)</p>
         </div>
     </section>
@@ -44,9 +42,8 @@ Críticos</h2>
         <section>
             <h2 class="section-title">Descripción General</h2>
             <p class="parrafo-centrado">
-                En esta	asignatura el	estudiante	comprenderá	los	conceptos	básicos	de	la	teoría	del	cálculo	de	variaciones	y	puntos	
-críticos.	 Tales	 herramientas	 le	 permitirán	 resolver problemas	 específicos	 de	 la	 Física,	 Matemática	 e	
-Ingeniería. 
+                En esta asignatura el estudiante comprenderá los conceptos básicos de la teoría del cálculo de variaciones y puntos críticos. Tales herramientas le permitirán resolver problemas específicos de la Física, Matemática e Ingeniería.
+            </p>
         </section>
 
         <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
@@ -57,17 +54,17 @@ Ingeniería.
                 <div class="electivos-semestre">
                     <h3 class="electivos-titulo">Métodos Variacionales Avanzados</h3>
                     <ul class="lista">
-                        <li><strong>Fundamentos del Cálculo de Variaciones:</strong> Cálculo de variaciones, Teória básica, Existencia de minimizantes. </li>
-                        <li><strong>Principio de Ekeland y Restricciones:</strong> Ekeland, Restricciones y multiplicadores de Lagrange.</li>
+                        <li><strong>Fundamentos del Cálculo de Variaciones:</strong> Cálculo de variaciones, Teoría básica, Existencia de minimizantes.</li>
+                        <li><strong>Principio de Ekeland y Restricciones:</strong> Ekeland, restricciones y multiplicadores de Lagrange.</li>
                         <li><strong>El Principio de Concentración-Compacidad:</strong> Espacios de Sobolev y otros espacios.</li>
                     </ul>
                 </div>
                 <div class="electivos-semestre">
-                    <h3 class="electivos-titulo"> Análisis No Lineal y Teoría Espectral</h3>
+                    <h3 class="electivos-titulo">Análisis No Lineal y Teoría Espectral</h3>
                     <ul class="lista">
-                        <li><strong>Teoremas Minimax y Puntos Críticos:</strong> Teorema	 del	 Paso	 de	 la	 Montaña.	 Lema	 de	 la	 deformación.	 	 Teorema	 de	 Linking	 y	Teorema	de	punto	de	Silla.</li>
-                        <li><strong>Teoría de Índice y Métodos Topológicos:</strong> Teoría	de	índice,	Genero	de	Krasnoselskii,	categoría	de	Ljusternik-Schnirelman.</li>
-                        <li><strong>Operadores Pseudodiferenciales:</strong> Operadores	pseudo	diferenciales	y	sus	símbolos.</li>
+                        <li><strong>Teoremas Minimax y Puntos Críticos:</strong> Teorema del Paso de la Montaña, Lema de la deformación, Teorema de Linking y Teorema de Punto Silla.</li>
+                        <li><strong>Teoría de Índice y Métodos Topológicos:</strong> Teoría de índice, Género de Krasnoselskii, categoría de Ljusternik-Schnirelman.</li>
+                        <li><strong>Operadores Pseudodiferenciales:</strong> Operadores pseudodiferenciales y sus símbolos.</li>
                     </ul>
                 </div>
             </div>
@@ -84,13 +81,12 @@ Ingeniería.
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📐</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Bases Sólidas</h4>
-                    <p style="font-size: 0.9em; color: #555;">Es fundamental manejar bien los conceptos de Ecuaciones Diferencales Parciales.</p>
+                    <p style="font-size: 0.9em; color: #555;">Es fundamental manejar bien los conceptos de Ecuaciones Diferenciales Parciales.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📖</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Bibliografía</h4>
-                    <p style="font-size: 0.9em; color: #555;">El texto guía es Evans,L.C. (2002). Partial differential equations. , pero Folland, B. (1995). Introduction to partial differential
-equations (2da ed.). son una excelente alternativa para profundizar en la teoría.</p>
+                    <p style="font-size: 0.9em; color: #555;">El texto guía es Evans, L.C. (2002) <em>Partial Differential Equations</em>, pero Folland, B. (1995) <em>Introduction to Partial Differential Equations</em> (2da ed.) es una excelente alternativa para profundizar en la teoría.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📝</span>
@@ -106,24 +102,26 @@ equations (2da ed.). son una excelente alternativa para profundizar en la teorí
             <h2 class="section-title">Historial de Impartición</h2>
             <div class="electivos-container" style="max-width: 900px; margin: 0 auto;">
                 
-                    <div style="display: grid; gap: 10px;">
-                        <div style="background: white; border: 1px solid #eaeaea; padding: 15px; border-radius: 8px; display: flex; flex-direction: column; gap: 8px;">
-                            <strong style="color: #333; border-bottom: 1px solid #eee; padding-bottom: 5px; width: fit-content;">2025.1</strong>
-                            <div style="display: flex; gap: 25px; flex-wrap: wrap; font-size: 0.95em;">
-                                <span style="color: #666;"><strong>Profesor:</strong> Leonelo Iturriaga Pastene </span>
-                                <span style="color: #666;"><strong>Ayudante:</strong> </span>
-                            </div>
+                <div style="display: grid; gap: 10px;">
+                    <div style="background: white; border: 1px solid #eaeaea; padding: 15px; border-radius: 8px; display: flex; flex-direction: column; gap: 8px;">
+                        <strong style="color: #333; border-bottom: 1px solid #eee; padding-bottom: 5px; width: fit-content;">2025.1</strong>
+                        <div style="display: flex; gap: 25px; flex-wrap: wrap; font-size: 0.95em;">
+                            <span style="color: #666;"><strong>Profesor:</strong> Leonelo Iturriaga Pastene </span>
+                            <span style="color: #666;"><strong>Ayudante:</strong> </span>
                         </div>
                     </div>
-                    <div style="display: grid; gap: 10px;">
-                        <div style="background: white; border: 1px solid #eaeaea; padding: 15px; border-radius: 8px; display: flex; flex-direction: column; gap: 8px;">
-                            <strong style="color: #333; border-bottom: 1px solid #eee; padding-bottom: 5px; width: fit-content;">2022.1</strong>
-                            <div style="display: flex; gap: 25px; flex-wrap: wrap; font-size: 0.95em;">
-                                <span style="color: #666;"><strong>Profesor:</strong> Leonelo Iturriaga Pastene </span>
-                                <span style="color: #666;"><strong>Ayudante:</strong> </span>
-                            </div>
-                        </div>
                 </div>
+
+                <div style="display: grid; gap: 10px; margin-top: 10px;">
+                    <div style="background: white; border: 1px solid #eaeaea; padding: 15px; border-radius: 8px; display: flex; flex-direction: column; gap: 8px;">
+                        <strong style="color: #333; border-bottom: 1px solid #eee; padding-bottom: 5px; width: fit-content;">2022.1</strong>
+                        <div style="display: flex; gap: 25px; flex-wrap: wrap; font-size: 0.95em;">
+                            <span style="color: #666;"><strong>Profesor:</strong> Leonelo Iturriaga Pastene </span>
+                            <span style="color: #666;"><strong>Ayudante:</strong> </span>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
@@ -142,7 +140,7 @@ equations (2da ed.). son una excelente alternativa para profundizar en la teorí
         </section>
 
         <div class="section-VerMas" style="margin-top: 50px;">
-            <a href="../../Lineas de investigacion/EDP.html">Volver a Analisis no Lineal y Ecuaciones Diferenciales Parciales.</a>
+            <a href="../../Lineas de investigacion/EDP.html">Volver a Análisis No Lineal y Ecuaciones Diferenciales Parciales</a>
         </div>
     </div>
 </main>
