--- a/client/src/pages/Ramos_Electivos/Nolineal-EDP/Teo-avan-EDP.html
+++ b/client/src/pages/Ramos_Electivos/Nolineal-EDP/Teo-avan-EDP.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teoría	 Avanzada	 de	 Ecuaciones	
-Diferenciales	Parciales  | Red For U</title>
+    <title>Teoría Avanzada de Ecuaciones Diferenciales Parciales | Red For U</title>
     <link rel="stylesheet" href="../../../assets/styles.css">
     <link rel="stylesheet" href="../../../assets/contenedor.css">
 </head>
@@ -20,13 +19,13 @@ Diferenciales	Parciales  | Red For U</title>
                 <li><a href="../../../index.html">Inicio</a></li>
                 <li><a href="../../Malla.html">Malla Interactiva</a></li>
                 <li><a href="../../pages/notas.html">Notas</a></li>
-                <li><a href="../..electivos.html">Electivos</a></li>
+                <li><a href="../../electivos.html">Electivos</a></li>
                 <li><a href="../../lineas.html">Líneas de Investigación</a></li>
                 <li><a href="../../repositorios.html">Repositorios</a></li>
                 <li><a href="../../guias.html">Guías</a></li>
                 <li><a href="../../Sala.html">Sala Matemática</a></li>
                 <li><a href="../../CEEMAT.html">CEEMAT</a></li>
-                <li class="cart-link"><a href="Perfil.html"> Perfil </a></li>
+                <li class="cart-link"><a href="Perfil.html">Perfil</a></li>
             </ul>
         </nav>
     </header>
@@ -34,8 +33,7 @@ Diferenciales	Parciales  | Red For U</title>
 <main>
     <section class="hero-slider2">
         <div class="hero-slide active">
-            <h2>Teoría	 Avanzada	 de	 Ecuaciones	
-Diferenciales	Parciales </h2>
+            <h2>Teoría Avanzada de Ecuaciones Diferenciales Parciales</h2>
             <p>MAT-409 | 8 Créditos SCT (4 UTFSM)</p>
         </div>
     </section>
@@ -44,9 +42,8 @@ Diferenciales	Parciales </h2>
         <section>
             <h2 class="section-title">Descripción General</h2>
             <p class="parrafo-centrado">
-                En esta	asignatura  el	estudiante	adquiere	 herramientas	 de	análisis	 de	ecuaciones	 diferenciales	 parciales:	espacios	
-de	 Sobolev,	 soluciones	 débiles,	 existencia,	 regularidad,	 principios	 del	 máximo,	 desarrollando	 habilidades	
-para	conocer	sus	conexiones	con	problemas	de	diferentes	ámbitos	físicos	y	matemáticos.	
+                En esta asignatura el estudiante adquiere herramientas de análisis de ecuaciones diferenciales parciales: espacios de Sobolev, soluciones débiles, existencia, regularidad, principios del máximo, desarrollando habilidades para conocer sus conexiones con problemas de diferentes ámbitos físicos y matemáticos.
+            </p>
         </section>
 
         <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
@@ -57,19 +54,15 @@ para	conocer	sus	conexiones	con	problemas	de	diferentes	ámbitos	físicos	y	mate
                 <div class="electivos-semestre">
                     <h3 class="electivos-titulo">Fundamentos de Ecuaciones Diferenciales Parciales</h3>
                     <ul class="lista">
-                        <li><strong>Algunas	 ecuaciones	 importantes:</strong>  Ecuación	 del	 transporte,	 Ecuación	 de	 Laplace,	 Ecuación	 del	 calor,	
-Ecuación	de	onda.</li>
-                        <li><strong>Espacios	de	Sobolev:</strong>Derivadas	débiles,	propiedades	elementales,	extensiones,	trazas,	desigualdades	
-de	Sobolev,	Compacidad.</li>
-                        
+                        <li><strong>Algunas ecuaciones importantes:</strong> Ecuación del transporte, Ecuación de Laplace, Ecuación del calor, Ecuación de onda.</li>
+                        <li><strong>Espacios de Sobolev:</strong> Derivadas débiles, propiedades elementales, extensiones, trazas, desigualdades de Sobolev, Compacidad.</li>
                     </ul>
                 </div>
                 <div class="electivos-semestre">
-                    <h3 class="electivos-titulo"> Teoría de Ecuaciones Elípticas y Parabólicas</h3>
+                    <h3 class="electivos-titulo">Teoría de Ecuaciones Elípticas y Parabólicas</h3>
                     <ul class="lista">
-                        <li><strong>Ecuaciones	 elípticas	 de	 segundo	 orden:</strong>Soluciones	 débiles,	 existencia,	 regularidad,	 principios	 del	
-máximo,	valores	propios	y	funciones	propias.</li>
-                        
+                        <li><strong>Ecuaciones elípticas de segundo orden:</strong> Soluciones débiles, existencia, regularidad, principios del máximo, valores propios y funciones propias.</li>
+                    </ul>   
                 </div>
             </div>
             <div class="section-VerMas" style="margin-top: 50px;">
@@ -85,13 +78,12 @@ máximo,	valores	propios	y	funciones	propias.</li>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📐</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Bases Sólidas</h4>
-                    <p style="font-size: 0.9em; color: #555;">Es fundamental manejar bien los conceptos de Análisis Funcional, sobretodo conceptos básicos de espacios vectoriales topológicos.</p>
+                    <p style="font-size: 0.9em; color: #555;">Es fundamental manejar bien los conceptos de Análisis Funcional, sobre todo conceptos básicos de espacios vectoriales topológicos.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📖</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Bibliografía</h4>
-                    <p style="font-size: 0.9em; color: #555;"> Bibliografía Básica es Evans,	 L.C.	 (2010)	 Partial	 differential	 equations.	  y Brezis,	 H.	 (2010). Functional	 analysis,	 Sobolev	 spaces	 and	
-partial	 differential	 equations.</p>
+                    <p style="font-size: 0.9em; color: #555;">Bibliografía Básica es Evans, L.C. (2010) <em>Partial Differential Equations</em> y Brezis, H. (2010) <em>Functional Analysis, Sobolev Spaces and Partial Differential Equations</em>.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📝</span>
@@ -135,7 +127,7 @@ partial	 differential	 equations.</p>
         </section>
 
         <div class="section-VerMas" style="margin-top: 50px;">
-            <a href="../../Lineas de investigacion/EDP.html">Volver a Analisis no Lineal y Ecuaciones Diferenciales Parciales.</a>
+            <a href="../../Lineas de investigacion/EDP.html">Volver a Análisis No Lineal y Ecuaciones Diferenciales Parciales</a>
         </div>
     </div>
 </main>
