--- a/client/src/pages/Ramos_Electivos/Sist-Din/Mod-biomate.html
+++ b/client/src/pages/Ramos_Electivos/Sist-Din/Mod-biomate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelos	Biomatemáticos | Red For U</title>
+    <title>Modelos Biomatemáticos | Red For U</title>
     <link rel="stylesheet" href="../../../assets/styles.css">
     <link rel="stylesheet" href="../../../assets/contenedor.css">
 </head>
@@ -19,13 +19,13 @@
                 <li><a href="../../../index.html">Inicio</a></li>
                 <li><a href="../../Malla.html">Malla Interactiva</a></li>
                 <li><a href="../../pages/notas.html">Notas</a></li>
-                <li><a href="../..electivos.html">Electivos</a></li>
+                <li><a href="../../electivos.html">Electivos</a></li>
                 <li><a href="../../lineas.html">Líneas de Investigación</a></li>
                 <li><a href="../../repositorios.html">Repositorios</a></li>
                 <li><a href="../../guias.html">Guías</a></li>
                 <li><a href="../../Sala.html">Sala Matemática</a></li>
                 <li><a href="../../CEEMAT.html">CEEMAT</a></li>
-                <li class="cart-link"><a href="Perfil.html"> Perfil </a></li>
+                <li class="cart-link"><a href="Perfil.html">Perfil</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
 <main>
     <section class="hero-slider2">
         <div class="hero-slide active">
-            <h2>Modelos	Biomatemáticos</h2>
+            <h2>Modelos Biomatemáticos</h2>
             <p>MAT-437 | 8 Créditos SCT (4 UTFSM)</p>
         </div>
     </section>
@@ -42,40 +42,34 @@
         <section>
             <h2 class="section-title">Descripción General</h2>
             <p class="parrafo-centrado">
-                 En esta	 asignatura	el
-estudiante	 modelará	 y	 analizará	 problemas	 en	 dinámica	 poblacional,	 epidemiología	 matemática,	
-cinemática	de	reacciones	bioquímicas,	sistemas	excitables	y	fenómenos	de	propagación	espacial.	Para	ello,	
-el	estudiante	aprenderá	y	aplicará	 técnicas	avanzadas	de	análisis	de	ecuaciones diferenciales	ordinarias	y	
-parciales	en	los	modelos	estudiados,	dando	énfasis	en	la	interpretación	de	los	resultados	obtenidos	en	el	
-contexto	del	fenómeno	biológico	en	estudio.
+                En esta asignatura el estudiante modelará y analizará problemas en dinámica poblacional, epidemiología matemática, cinemática de reacciones bioquímicas, sistemas excitables y fenómenos de propagación espacial. Para ello, el estudiante aprenderá y aplicará técnicas avanzadas de análisis de ecuaciones diferenciales ordinarias y parciales en los modelos estudiados, dando énfasis en la interpretación de los resultados obtenidos en el contexto del fenómeno biológico en estudio.
+            </p>
         </section>
 
         <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
 
         <section>
-           <h2 class="section-title">Contenidos Específicos</h2>
+            <h2 class="section-title">Contenidos Específicos</h2>
             <div class="electivos-listas">
                 <div class="electivos-semestre">
                     <h3 class="electivos-titulo">Modelos</h3>
                     <ul class="lista">
-                        <li><strong> Dinámica de Poblaciones:</strong> Modelos	para	poblaciones	aisladas.	Sistemas	depredador-presa.	Respuestas	
-funcionales,	bifurcaciones	y	ciclos	límite.</li>
-                        <li><strong>Enfermedades	infecciosas:</strong> Modelos	SIRS,	número	básico	de	reproducción.</li>
-                        <li><strong>Cinética de	 reacciones	 bioquímicas:</strong> Modelo	 de	 Michaelis-Menten,	 sistemas	 slow-fast	 y	 análisis	 de	
-perturbación	singular.</li>
+                        <li><strong>Dinámica de Poblaciones:</strong> Modelos para poblaciones aisladas. Sistemas depredador-presa. Respuestas funcionales, bifurcaciones y ciclos límite.</li>
+                        <li><strong>Enfermedades infecciosas:</strong> Modelos SIRS, número básico de reproducción.</li>
+                        <li><strong>Cinética de reacciones bioquímicas:</strong> Modelo de Michaelis-Menten, sistemas slow-fast y análisis de perturbación singular.</li>
                     </ul>
                 </div>
                 <div class="electivos-semestre">
                     <h3 class="electivos-titulo">Modelos Matemáticos en Biología</h3>
                     <ul class="lista">
-                        <li><strong>Oscilaciones	 biológicas:</strong> Osciladores	 acoplados	 y	 sincronización.	 Ondas	 viajeras	 en	 osciladores	
-acoplados.	Oscilaciones	de	relajación,	propagación	de	impulsos	nerviosos	en	neuronas,	ecuaciones	de	
-Hodgkin-Huxley,	modelo	de	Fitzhugh-Nagumo.	
-                        <li><strong>Mecanismos	 de	 dispersión	 espacial:</strong>  Ecuación	 de	 conservación.	 Convección,	 atracción	 y	 difusión.	
-Ecuaciones	 de	 reacción-difusión	 y	 propagación	 espacial.	 Ondas	 viajeras	 en	 ecuaciones	 de	 reaccióndifusión.</li>
-                        <li><strong>Formación	 de	 patrones:</strong> Bifurcación	 de	 Turing.	 Sistemas	 activador-inhibidor,	morfogénesis.</li>
+                        <li><strong>Oscilaciones biológicas:</strong> Osciladores acoplados y sincronización. Ondas viajeras en osciladores acoplados. Oscilaciones de relajación, propagación de impulsos nerviosos en neuronas, ecuaciones de Hodgkin-Huxley, modelo de Fitzhugh-Nagumo.</li>
+                        <li><strong>Mecanismos de dispersión espacial:</strong> Ecuación de conservación. Convección, atracción y difusión. Ecuaciones de reacción-difusión y propagación espacial. Ondas viajeras en ecuaciones de reacción-difusión.</li>
+                        <li><strong>Formación de patrones:</strong> Bifurcación de Turing. Sistemas activador-inhibidor, morfogénesis.</li>
                     </ul>
                 </div>
+            </div>
+            <div class="section-VerMas" style="margin-top: 50px;">
+                <a href="https://usmcl-my.sharepoint.com/:b:/g/personal/ceemat_sj_usm_cl/IQDUbnuY1w1BR4mzU3gzEQbPAY1v7Hw-Kbr2sH8JboOabrE?e=8y051L">Ver Programa</a>
             </div>
         </section>
 
@@ -87,13 +81,12 @@ Ecuaciones	 de	 reacción-difusión	 y	 propagación	 espacial.	 Ondas	 viajeras
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">🍎</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Prerrequisitos</h4>
-                    <p style="font-size: 0.9em; color: #555;">Es indispensable un manejo de sistemas de ecuaciones diferenciables ordinariasno lineales, identificando sistemas topológicamente equivalentes.</p>
+                    <p style="font-size: 0.9em; color: #555;">Es indispensable un manejo de sistemas de ecuaciones diferenciales ordinarias no lineales, identificando sistemas topológicamente equivalentes.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📘</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Bibliografía</h4>
-                    <p style="font-size: 0.9em; color: #555;">Como bibliografias basicas Britton,	N.	F.	(2012).	Essential	Mathematical	Biology  y Farkas,	M.	(2001).	Dynamical	Models	in	Biology. Como bibliografias recomendadas Brauer,	F.	&	Chávez,	C.	(2012).	Mathematical	Models	in	Population	
-Biology	and	Epidemiology.</p>
+                    <p style="font-size: 0.9em; color: #555;">Como bibliografía básica Britton, N. F. (2012) <em>Essential Mathematical Biology</em> y Farkas, M. (2001) <em>Dynamical Models in Biology</em>. Como bibliografía recomendada Brauer, F. & Chávez, C. (2012) <em>Mathematical Models in Population Biology and Epidemiology</em>.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📈</span>
@@ -106,7 +99,7 @@ Biology	and	Epidemiology.</p>
         <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
 
         <section>
-           <h2 class="section-title">Historial de Impartición</h2>
+            <h2 class="section-title">Historial de Impartición</h2>
             <div class="electivos-container" style="max-width: 900px; margin: 0 auto;">
                 <div class="historial-grid" style="display: grid; gap: 15px;">
                     <div style="background: #fff9e6; border-left: 5px solid #ffc107; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.05);">
@@ -128,3 +121,4 @@ Biology	and	Epidemiology.</p>
     </div>
 </main>
 </body>
+</html>
