--- a/client/src/pages/Ramos_Electivos/Sist-Din/Sist_din_Caos.html
+++ b/client/src/pages/Ramos_Electivos/Sist-Din/Sist_din_Caos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistemas	Dinámicos	y	Caos | Red For U</title>
+    <title>Sistemas Dinámicos y Caos | Red For U</title>
     <link rel="stylesheet" href="../../../assets/styles.css">
     <link rel="stylesheet" href="../../../assets/contenedor.css">
 </head>
@@ -19,13 +19,13 @@
                 <li><a href="../../../index.html">Inicio</a></li>
                 <li><a href="../../Malla.html">Malla Interactiva</a></li>
                 <li><a href="../../pages/notas.html">Notas</a></li>
-                <li><a href="../..electivos.html">Electivos</a></li>
+                <li><a href="../../electivos.html">Electivos</a></li>
                 <li><a href="../../lineas.html">Líneas de Investigación</a></li>
                 <li><a href="../../repositorios.html">Repositorios</a></li>
                 <li><a href="../../guias.html">Guías</a></li>
                 <li><a href="../../Sala.html">Sala Matemática</a></li>
                 <li><a href="../../CEEMAT.html">CEEMAT</a></li>
-                <li class="cart-link"><a href="Perfil.html"> Perfil </a></li>
+                <li class="cart-link"><a href="Perfil.html">Perfil</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
 <main>
     <section class="hero-slider2">
         <div class="hero-slide active">
-            <h2>Sistemas	Dinámicos	y	Caos</h2>
+            <h2>Sistemas Dinámicos y Caos</h2>
             <p>MAT-449 | 8 Créditos SCT (4 UTFSM)</p>
         </div>
     </section>
@@ -42,35 +42,27 @@
         <section>
             <h2 class="section-title">Descripción General</h2>
             <p class="parrafo-centrado">
-                 En esta	 asignatura	 se	comprenderá	los	fundamentos	de	la	teoría	moderna	de	sistemas	dinámicos	no	lineales	y	caos,	y	
-sus	 aplicaciones.	 El	 estudiante	 aplicará	 diversos	 métodos	 analíticos	 y	 geométricos	 para	 obtener	
-información	 cuantitativa	 y	 cualitativa	 sobre	 el	 comportamiento	 de	 un	 sistema	 dinámico,	 identificando	
-bifurcaciones	 y	 dinámica	 caótica	 de	 un	 sistema,	 y	 describiendo	 sus	 consecuencias	 en	 modelos	
-matemáticos.
+                En esta asignatura se comprenderán los fundamentos de la teoría moderna de sistemas dinámicos no lineales y caos, y sus aplicaciones. El estudiante aplicará diversos métodos analíticos y geométricos para obtener información cuantitativa y cualitativa sobre el comportamiento de un sistema dinámico, identificando bifurcaciones y dinámica caótica de un sistema, y describiendo sus consecuencias en modelos matemáticos.
+            </p>
         </section>
 
         <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
 
         <section>
-           <h2 class="section-title">Contenidos Específicos</h2>
+            <h2 class="section-title">Contenidos Específicos</h2>
             <div class="electivos-listas">
                 <div class="electivos-semestre">
                     <h3 class="electivos-titulo">Análisis</h3>
                     <ul class="lista">
-                        <li><strong> Análisis Local:</strong> Hiperbolicidad,	 teorema	 de	 Hartman-Grobman.	 Aplicación	 de	 retorno	 de	 Poincaré.	
-Ecuación	variacional	y	teoría	de	Floquet.	Bifurcaciones	locales	en	sistemas	continuos	y	discretos  </li>
-                        <li><strong>Análisis Global:</strong>Variedades	 invariantes.	Teorema	 de	 la	 variedad	estable.	 	 Conexiones	 homoclínicas	 y	
-heteroclínicas.	 Puntos	 no-errantes.	 Atractores.	 Separatrices	 y	 cuencas	 de	 atracción.	 Osciladores	
-acoplados.	Dinámica	 cuasiperiódica.	Oscilaciones	 forzadas.	 Teorema	 de	 Peixoto.	 Sistemas	 de	MorseSmale.</li>
+                        <li><strong>Análisis Local:</strong> Hiperbolicidad, Teorema de Hartman-Grobman. Aplicación de retorno de Poincaré. Ecuación variacional y teoría de Floquet. Bifurcaciones locales en sistemas continuos y discretos.</li>
+                        <li><strong>Análisis Global:</strong> Variedades invariantes. Teorema de la variedad estable. Conexiones homoclínicas y heteroclínicas. Puntos no-errantes. Atractores. Separatrices y cuencas de atracción. Osciladores acoplados. Dinámica cuasiperiódica. Oscilaciones forzadas. Teorema de Peixoto. Sistemas de Morse-Smale.</li>
                     </ul>
                 </div>
                 <div class="electivos-semestre">
-                    <h3 class="electivos-titulo">Conceptos Basicos y Caos</h3>
+                    <h3 class="electivos-titulo">Conceptos Básicos y Caos</h3>
                     <ul class="lista">
-                        <li><strong>Conceptos	 básicos: </strong> Espacios	 de	 fase.	 Campos	 de	 vectores,	flujos	 y	 difeomorfismos.	 Espacio	 de	 fase.	
-Retratos	de	fase,	equivalencia	y	conjugación	topológica.	Conjuntos	invariantes.	</li>
-                        <li><strong>Elementos	de	la	Teoría	del	Caos:</strong>  Sensibilidad	a	las	condiciones	iniciales.	Transitividad.	Rutas	al	caos.	
-Conjuntos	 invariantes	 tipo	 Cantor.	 Dinámica	 simbólica.	 Herradura	 de	 Smale. </li>
+                        <li><strong>Conceptos básicos:</strong> Espacios de fase. Campos de vectores, flujos y difeomorfismos. Retratos de fase, equivalencia y conjugación topológica. Conjuntos invariantes.</li>
+                        <li><strong>Elementos de la Teoría del Caos:</strong> Sensibilidad a las condiciones iniciales. Transitividad. Rutas al caos. Conjuntos invariantes tipo Cantor. Dinámica simbólica. Herradura de Smale.</li>
                     </ul>
                 </div>
             </div>
@@ -84,15 +76,12 @@ Conjuntos	 invariantes	 tipo	 Cantor.	 Dinámica	 simbólica.	 Herradura	 de	 Sm
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">🍎</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Prerrequisitos</h4>
-                    <p style="font-size: 0.9em; color: #555;">Es indispensable un manejo de análisis	matemático	en	espacios	métricos,	espacios	topológicos	y	
-espacios	vectoriales	normados. Ademas de poder analizar un sistema de ecuaciones diferenciales ordinarias lineales y no lineales</p>
+                    <p style="font-size: 0.9em; color: #555;">Es indispensable un manejo de análisis matemático en espacios métricos, espacios topológicos y espacios vectoriales normados. Además de poder analizar un sistema de ecuaciones diferenciales ordinarias lineales y no lineales.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📘</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Bibliografía</h4>
-                    <p style="font-size: 0.9em; color: #555;">Como bibliografias basicas Devaney,	 R.	 L.	 (2003).	 An	 Introduction	 to	 Chaotic	 Dynamical	
-Systems. Como bibliografias recomendadas Arrowsmith,	 D.	 K.,	 &	 Place,	 C.	 M.	 	 (2011).	 An	 Introduction	 to	
-Dynamical	Systems.</p>
+                    <p style="font-size: 0.9em; color: #555;">Como bibliografía básica Devaney, R. L. (2003) <em>An Introduction to Chaotic Dynamical Systems</em>. Como bibliografía recomendada Arrowsmith, D. K., & Place, C. M. (2011) <em>An Introduction to Dynamical Systems</em>.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📈</span>
@@ -140,7 +129,7 @@ Dynamical	Systems.</p>
                                 <span style="color: #666;"><strong>Ayudante:</strong> </span>
                             </div>
                         </div>
-        
+                    </div>
                 </div>
             </div>
         </section>
@@ -151,3 +140,4 @@ Dynamical	Systems.</p>
     </div>
 </main>
 </body>
+</html>
