--- a/client/src/pages/Ramos_Electivos/Sist-Din/Teo-bifu.html
+++ b/client/src/pages/Ramos_Electivos/Sist-Din/Teo-bifu.html
@@ -19,13 +19,13 @@
                 <li><a href="../../../index.html">Inicio</a></li>
                 <li><a href="../../Malla.html">Malla Interactiva</a></li>
                 <li><a href="../../pages/notas.html">Notas</a></li>
-                <li><a href="../..electivos.html">Electivos</a></li>
+                <li><a href="../../electivos.html">Electivos</a></li>
                 <li><a href="../../lineas.html">Líneas de Investigación</a></li>
                 <li><a href="../../repositorios.html">Repositorios</a></li>
                 <li><a href="../../guias.html">Guías</a></li>
                 <li><a href="../../Sala.html">Sala Matemática</a></li>
                 <li><a href="../../CEEMAT.html">CEEMAT</a></li>
-                <li class="cart-link"><a href="Perfil.html"> Perfil </a></li>
+                <li class="cart-link"><a href="Perfil.html">Perfil</a></li>
             </ul>
         </nav>
     </header>
@@ -42,28 +42,29 @@
         <section>
             <h2 class="section-title">Descripción General</h2>
             <p class="parrafo-centrado">
-                En esta	asignatura el estudiante adquiere los fundamentos de la teoría de bifurcaciones de sistemas dinámicos a tiempo continuo y discreto, desarrollando habilidades de análisis sobre	la ocurrencia, genericidad, transversalidad y posibles deformaciones, obteniendo información sobre rutas al	caos, y sobre cambios geométricos y topológicos	en familias	de sistemas	dinámicos que dependen de parámetros.
+                En esta asignatura el estudiante adquiere los fundamentos de la teoría de bifurcaciones de sistemas dinámicos a tiempo continuo y discreto, desarrollando habilidades de análisis sobre la ocurrencia, genericidad, transversalidad y posibles deformaciones, obteniendo información sobre rutas al caos, y sobre cambios geométricos y topológicos en familias de sistemas dinámicos que dependen de parámetros.
+            </p>
         </section>
 
         <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
 
         <section>
-           <h2 class="section-title">Contenidos Específicos</h2>
+            <h2 class="section-title">Contenidos Específicos</h2>
             <div class="electivos-listas">
                 <div class="electivos-semestre">
                     <h3 class="electivos-titulo">Teoría</h3>
                     <ul class="lista">
-                        <li><strong> Definiciones y herramientas básicas:</strong> Diagrama de bifurcación, Codimensión,Deformación de una bifurcación, Teorema de la forma normal y Forma normal topológica de una bifurcación.</li>
-                        <li><strong>Teoría de bifurcaciones locales de codimensión uno:</strong> Fold, transcrítica, pitchfork, flip, Andronov-Hopf, Neimarck-Sacker. Condiciones de genericidad y transversalidad.</li>
+                        <li><strong>Definiciones y herramientas básicas:</strong> Diagrama de bifurcación, Codimensión, Deformación de una bifurcación, Teorema de la forma normal y Forma normal topológica de una bifurcación.</li>
+                        <li><strong>Teoría de bifurcaciones locales de codimensión uno:</strong> Fold, transcrítica, pitchfork, flip, Andronov-Hopf, Neimark-Sacker. Condiciones de genericidad y transversalidad.</li>
                         <li><strong>Teoría de la variedad central:</strong> Teorema de reducción de dimensión. Variedades centrales en sistemas que dependen de parámetros.</li>
                     </ul>
                 </div>
                 <div class="electivos-semestre">
                     <h3 class="electivos-titulo">Bifurcaciones</h3>
                     <ul class="lista">
-                        <li><strong>Bifurcaciones globales en sistemas continuos:</strong> Órbitas homoclínicas y heteroclínicas, Teorema de Andronov-Leontovich, Bifurcaciones homoclínicas en	R^3, Teoremas y caos homoclínico de	Shilnikov.</li>
-                        <li><strong>Otras bifurcaciones a un parámetro:</strong>  Bifurcaciones de órbitas homoclínicas	a ciclos, tangencias homoclínicas y	enredos	homoclínicos, Bifurcaciones	en	toros	invariantes, Número	de rotación, Lenguas de	Arnol’d.</li>
-                        <li><strong>Bifurcaciones locales de codimensión dos:</strong> Cusp, Hopf degenerada, Bogdanov-Takens, fold-Hopf, flip	generalizada, resonancias fuertes.</li>
+                        <li><strong>Bifurcaciones globales en sistemas continuos:</strong> Órbitas homoclínicas y heteroclínicas, Teorema de Andronov-Leontovich, Bifurcaciones homoclínicas en R<sup>3</sup>, Teoremas y caos homoclínico de Shilnikov.</li>
+                        <li><strong>Otras bifurcaciones a un parámetro:</strong> Bifurcaciones de órbitas homoclínicas a ciclos, tangencias homoclínicas y enredos homoclínicos, Bifurcaciones en toros invariantes, Número de rotación, Lenguas de Arnold.</li>
+                        <li><strong>Bifurcaciones locales de codimensión dos:</strong> Cusp, Hopf degenerada, Bogdanov-Takens, fold-Hopf, flip generalizada, resonancias fuertes.</li>
                     </ul>
                 </div>
             </div>
@@ -77,14 +78,12 @@
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">🍎</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Prerrequisitos</h4>
-                    <p style="font-size: 0.9em; color: #555;">Es indispensable un manejo de sistemas dinámicos, existencia y estabilidad de puntos de equilibrio, órbitas periódicas, conjuntos caóticos, etc. Ademas de un control sobre bifurcaciones locales de un sistema, deduciendo los posibles cambios topológicos de un retrato de fase.</p>
+                    <p style="font-size: 0.9em; color: #555;">Es indispensable un manejo de sistemas dinámicos, existencia y estabilidad de puntos de equilibrio, órbitas periódicas, conjuntos caóticos, etc. Además de un control sobre bifurcaciones locales de un sistema, deduciendo los posibles cambios topológicos de un retrato de fase.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📘</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Bibliografía</h4>
-                    <p style="font-size: 0.9em; color: #555;">Como bibliografias basicas Guckenheimer	 J.,	 &	 Holmes,	 P.	 (1986).	 Nonlinear	 Oscillations,	
-Dynamical	Systems,	and	Bifurcations	of	Vector	Fields. Hale,	J.	&	Koçak,	H.	(1991).	Dynamics	and	Bifurcations. Como bibliografias recomendadas Arrowsmith,	 D.	 K.,	 &	 Place,	 C.	 M.	 	 (2011).	 An	 Introduction	 to	
-Dynamical	Systems.</p>
+                    <p style="font-size: 0.9em; color: #555;">Como bibliografía básica Guckenheimer J., & Holmes, P. (1986) <em>Nonlinear Oscillations, Dynamical Systems, and Bifurcations of Vector Fields</em> y Hale, J. & Koçak, H. (1991) <em>Dynamics and Bifurcations</em>. Como bibliografía recomendada Arrowsmith, D. K., & Place, C. M. (2011) <em>An Introduction to Dynamical Systems</em>.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📈</span>
@@ -100,7 +99,6 @@ Dynamical	Systems.</p>
             <h2 class="section-title">Historial de Impartición</h2>
             <div class="electivos-container" style="max-width: 900px; margin: 0 auto;">
                 <div class="historial-grid" style="display: grid; gap: 15px;">
-                    
                     <div style="display: grid; gap: 10px;">
                         <div style="background: white; border: 1px solid #eaeaea; padding: 15px; border-radius: 8px; display: flex; flex-direction: column; gap: 8px;">
                             <strong style="color: #333; border-bottom: 1px solid #eee; padding-bottom: 5px; width: fit-content;">2025.1</strong>
@@ -118,7 +116,7 @@ Dynamical	Systems.</p>
                                 <span style="color: #666;"><strong>Ayudante:</strong> </span>
                             </div>
                         </div>
-        
+                    </div>
                 </div>
             </div>
         </section>
