--- a/client/src/pages/Ramos_Electivos/Sist-Din/Vari-dif.html
+++ b/client/src/pages/Ramos_Electivos/Sist-Din/Vari-dif.html
@@ -19,13 +19,13 @@
                 <li><a href="../../../index.html">Inicio</a></li>
                 <li><a href="../../Malla.html">Malla Interactiva</a></li>
                 <li><a href="../../pages/notas.html">Notas</a></li>
-                <li><a href="../..electivos.html">Electivos</a></li>
+                <li><a href="../../electivos.html">Electivos</a></li>
                 <li><a href="../../lineas.html">Líneas de Investigación</a></li>
                 <li><a href="../../repositorios.html">Repositorios</a></li>
                 <li><a href="../../guias.html">Guías</a></li>
                 <li><a href="../../Sala.html">Sala Matemática</a></li>
                 <li><a href="../../CEEMAT.html">CEEMAT</a></li>
-                <li class="cart-link"><a href="Perfil.html"> Perfil </a></li>
+                <li class="cart-link"><a href="Perfil.html">Perfil</a></li>
             </ul>
         </nav>
     </header>
@@ -42,7 +42,7 @@
         <section>
             <h2 class="section-title">Descripción General</h2>
             <p class="parrafo-centrado">
-                En	esta asignatura se comprenderá los fundamentos de la geometría y topología diferencial: nociones de variedad diferencial y espacio tangente, fibrado vectorial, variedades riemannianas, formas diferenciales,	 etc.,desarrollando	habilidades	para identificar cómo dichas nociones se manifiestan en	ejemplos concretos de variedades diferenciables	conocidas.
+                En esta asignatura se comprenderán los fundamentos de la geometría y topología diferencial: nociones de variedad diferencial y espacio tangente, fibrado vectorial, variedades riemannianas, formas diferenciales, etc., desarrollando habilidades para identificar cómo dichas nociones se manifiestan en ejemplos concretos de variedades diferenciables conocidas.
             </p>
         </section>
 
@@ -55,7 +55,7 @@
                     <h3 class="electivos-titulo">Geometría Diferencial y Cálculo en Variedades</h3>
                     <ul class="lista">
                         <li><strong>Fundamentos de la Estructura Diferenciable:</strong> Establece la base topológica y las definiciones del espacio.</li>
-                        <li><strong>Cálculo en Variedades y Dinámica de Campos:</strong> Campos	vectoriales. Ecuaciones diferenciales y flujos. Derivadas de Lie y corchetes de Lie. Formas diferenciables.</li>
+                        <li><strong>Cálculo en Variedades y Dinámica de Campos:</strong> Campos vectoriales. Ecuaciones diferenciales y flujos. Derivadas de Lie y corchetes de Lie. Formas diferenciables.</li>
                         <li><strong>Teoría de Integración, Integrabilidad y Cohomología:</strong> Distribuciones y el teorema de integrabilidad de Frobenius. Integración. Teorema de Stokes, cohomología de Rham.</li>
                     </ul>
                 </div>
@@ -78,8 +78,7 @@
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📘</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Bibliografía</h4>
-                    <p style="font-size: 0.9em; color: #555;">Warner Foundations of differentiable manifolds and Lie groups (Vol.94) como bibliografia basica luego tenemos Kobayashi,	 S.,	 &	 Nomizu,	 K.. Foundations	 of	 differential	
-geometry (Vol.	1,	No.	2) Bredon,	G.	E.	(2013). Topology and	geometry (Vol.	139) como algunas recomendadas.</p>
+                    <p style="font-size: 0.9em; color: #555;">Como bibliografía básica Warner, F. (1983) <em>Foundations of Differentiable Manifolds and Lie Groups</em>. Como bibliografía recomendada Kobayashi, S., & Nomizu, K. (1996) <em>Foundations of Differential Geometry</em> y Bredon, G. E. (2013) <em>Topology and Geometry</em>.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📈</span>
