--- a/client/src/pages/Ramos_malla/Nolineal-EDP/EDPs.html
+++ b/client/src/pages/Ramos_malla/Nolineal-EDP/EDPs.html
@@ -19,13 +19,13 @@
                 <li><a href="../../../index.html">Inicio</a></li>
                 <li><a href="../../Malla.html">Malla Interactiva</a></li>
                 <li><a href="../../pages/notas.html">Notas</a></li>
-                <li><a href="../..electivos.html">Electivos</a></li>
+                <li><a href="../../electivos.html">Electivos</a></li>
                 <li><a href="../../lineas.html">Líneas de Investigación</a></li>
                 <li><a href="../../repositorios.html">Repositorios</a></li>
                 <li><a href="../../guias.html">Guías</a></li>
                 <li><a href="../../Sala.html">Sala Matemática</a></li>
                 <li><a href="../../CEEMAT.html">CEEMAT</a></li>
-                <li class="cart-link"><a href="Perfil.html"> Perfil </a></li>
+                <li class="cart-link"><a href="Perfil.html">Perfil</a></li>
             </ul>
         </nav>
     </header>
@@ -42,11 +42,8 @@
         <section>
             <h2 class="section-title">Descripción General</h2>
             <p class="parrafo-centrado">
-                Asignatura que introduce la teoría de ecuaciones diferenciales parciales mediante el estudio de
-soluciones de modelos básicos de ecuaciones. Se presentan en particular las ecuaciones de
-Laplace, de calor y de ondas, y sus principales propiedades.
-Se introducen a los espacios de Sobolev y sus aplicaciones en el estudio de la existencia y
-unicidad de soluciones débiles en problemas elípticos y en evolución. 
+                Asignatura que introduce la teoría de ecuaciones diferenciales parciales mediante el estudio de soluciones de modelos básicos de ecuaciones. Se presentan en particular las ecuaciones de Laplace, de calor y de ondas, y sus principales propiedades. Se introducen los espacios de Sobolev y sus aplicaciones en el estudio de la existencia y unicidad de soluciones débiles en problemas elípticos y en evolución.
+            </p>
         </section>
 
         <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
@@ -57,17 +54,15 @@ unicidad de soluciones débiles en problemas elípticos y en evolución.
                 <div class="electivos-semestre">
                     <h3 class="electivos-titulo">Teoría Clásica de EDP y Espacios de Sobolev</h3>
                     <ul class="lista">
-                        <li><strong>Introducción a las ecuaciones diferenciales parciales:</strong> Ecuación de Laplace, del Calor y de Ondas. Fórmulas de D’Alambert y Kirchhoff </li>
+                        <li><strong>Introducción a las ecuaciones diferenciales parciales:</strong> Ecuación de Laplace, del Calor y de Ondas. Fórmulas de D’Alembert y Kirchhoff.</li>
                         <li><strong>Espacios de Sobolev:</strong> Espacios de Sobolev y otros espacios.</li>
                     </ul>
                 </div>
                 <div class="electivos-semestre">
-                    <h3 class="electivos-titulo"> Ecuaciones elípticas de segundo orden y lineales de evolución</h3>
+                    <h3 class="electivos-titulo">Ecuaciones elípticas de segundo orden y lineales de evolución</h3>
                     <ul class="lista">
-                        <li><strong>Ecuaciones elípticas de segundo orden:</strong> soluciones débiles, existencia de soluciones
-débiles, regularidad de soluciones, principios del máximo, desigualdad de Harnack,
-valores propios y funciones propias.</li>
-                        <li><strong>Ecuaciones lineales de evolución:</strong> Ecuaciones parabólicas de segundo orden y hiperbólicas de segundo orden.</li>
+                        <li><strong>Ecuaciones elípticas de segundo orden:</strong> Soluciones débiles, existencia de soluciones débiles, regularidad de soluciones, principios del máximo, desigualdad de Harnack, valores propios y funciones propias.</li>
+                        <li><strong>Ecuaciones lineales de evolución:</strong> Ecuaciones parabólicas de segundo orden e hiperbólicas de segundo orden.</li>
                     </ul>
                 </div>
             </div>
@@ -84,18 +79,17 @@ valores propios y funciones propias.</li>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📐</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Bases Sólidas</h4>
-                    <p style="font-size: 0.9em; color: #555;">Es fundamental manejar bien los conceptos de Variable compleja, Analisis Funcional y de Ecuaciones diferencales Ordinarias.</p>
+                    <p style="font-size: 0.9em; color: #555;">Es fundamental manejar bien los conceptos de Variable Compleja, Análisis Funcional y de Ecuaciones Diferenciales Ordinarias.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📖</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Bibliografía</h4>
-                    <p style="font-size: 0.9em; color: #555;">El texto guía es Evans,L.C. (2002). Partial differential equations, pero Folland, B. (1995). Introduction to partial differential
-equations (2da ed.). y John, F., (1982). Partial differential equations. son una excelente alternativa para profundizar en la teoría.</p>
+                    <p style="font-size: 0.9em; color: #555;">El texto guía es Evans, L. C. (2002) <em>Partial Differential Equations</em>, pero Folland, B. (1995) <em>Introduction to Partial Differential Equations</em> (2da ed.) y John, F. (1982) <em>Partial Differential Equations</em> son una excelente alternativa para profundizar en la teoría.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📝</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Evaluaciones</h4>
-                    <p style="font-size: 0.9em; color: #555;">Nose.</p>
+                    <p style="font-size: 0.9em; color: #555;">Información no disponible.</p>
                 </div>
             </div>
         </section>
@@ -106,6 +100,7 @@ equations (2da ed.). y John, F., (1982). Partial differential equations. son una
             <h2 class="section-title">Historial de Impartición</h2>
             <div class="electivos-container" style="max-width: 900px; margin: 0 auto;">
                 <div class="historial-grid" style="display: grid; gap: 15px;">
+                    
                     <div style="background: #f8fbff; border-left: 5px solid #007bff; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); transition: transform 0.2s;">
                         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
                             <strong style="color: #0056b3; font-size: 1.2em;">2026.1</strong>
@@ -130,6 +125,7 @@ equations (2da ed.). y John, F., (1982). Partial differential equations. son una
                             </div>
                         </div>
                     </div>
+
                     <div style="display: grid; gap: 10px;">
                         <div style="background: white; border: 1px solid #eaeaea; padding: 15px; border-radius: 8px; display: flex; flex-direction: column; gap: 8px;">
                             <strong style="color: #333; border-bottom: 1px solid #eee; padding-bottom: 5px; width: fit-content;">2023.2</strong>
@@ -138,6 +134,8 @@ equations (2da ed.). y John, F., (1982). Partial differential equations. son una
                                 <span style="color: #666;"><strong>Ayudante:</strong> </span>
                             </div>
                         </div>
+                    </div>
+
                     <div style="display: grid; gap: 10px;">
                         <div style="background: white; border: 1px solid #eaeaea; padding: 15px; border-radius: 8px; display: flex; flex-direction: column; gap: 8px;">
                             <strong style="color: #333; border-bottom: 1px solid #eee; padding-bottom: 5px; width: fit-content;">2022.2</strong>
@@ -146,6 +144,8 @@ equations (2da ed.). y John, F., (1982). Partial differential equations. son una
                                 <span style="color: #666;"><strong>Ayudante:</strong> </span>
                             </div>
                         </div>
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -165,7 +165,7 @@ equations (2da ed.). y John, F., (1982). Partial differential equations. son una
         </section>
 
         <div class="section-VerMas" style="margin-top: 50px;">
-            <a href="../../Lineas de investigacion/EDP.html">Volver a Analisis no Lineal y Ecuaciones Diferenciales Parciales.</a>
+            <a href="../../Lineas de investigacion/EDP.html">Volver a Análisis No Lineal y Ecuaciones Diferenciales Parciales</a>
         </div>
     </div>
 </main>
