--- a/client/src/pages/Ramos_malla/Sist-din/EDO.html
+++ b/client/src/pages/Ramos_malla/Sist-din/EDO.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecuaciones Diferenciables Ordinarias | Red For U</title>
+    <title>Ecuaciones Diferenciales Ordinarias | Red For U</title>
     <link rel="stylesheet" href="../../../assets/styles.css">
     <link rel="stylesheet" href="../../../assets/contenedor.css">
 </head>
@@ -19,13 +19,13 @@
                 <li><a href="../../../index.html">Inicio</a></li>
                 <li><a href="../../Malla.html">Malla Interactiva</a></li>
                 <li><a href="../../pages/notas.html">Notas</a></li>
-                <li><a href="../..electivos.html">Electivos</a></li>
+                <li><a href="../../electivos.html">Electivos</a></li>
                 <li><a href="../../lineas.html">Líneas de Investigación</a></li>
                 <li><a href="../../repositorios.html">Repositorios</a></li>
                 <li><a href="../../guias.html">Guías</a></li>
                 <li><a href="../../Sala.html">Sala Matemática</a></li>
                 <li><a href="../../CEEMAT.html">CEEMAT</a></li>
-                <li class="cart-link"><a href="Perfil.html"> Perfil </a></li>
+                <li class="cart-link"><a href="Perfil.html">Perfil</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
 <main>
     <section class="hero-slider2">
         <div class="hero-slide active">
-            <h2>Ecuaciones Diferenciables Ordinarias</h2>
+            <h2>Ecuaciones Diferenciales Ordinarias</h2>
             <p>MAT-243 | 6 Créditos SCT (4 UTFSM)</p>
         </div>
     </section>
@@ -42,11 +42,8 @@
         <section>
             <h2 class="section-title">Descripción General</h2>
             <p class="parrafo-centrado">
-                En esta asignatura el estudiante comprende los fundamentos de la teoría de ecuaciones diferenciales ordinarias.
-Desarrolla habilidades de análisis cuantitativo y cualitativo de soluciones a nivel básico. El
-estudiante utiliza herramientas de matemática básica, análisis matemático y algebra lineal,
-aprendidas en los cursos anteriores, relacionándolas con los nuevos conceptos que adquiere en
-esta asignatura.
+                En esta asignatura el estudiante comprende los fundamentos de la teoría de ecuaciones diferenciales ordinarias. Desarrolla habilidades de análisis cuantitativo y cualitativo de soluciones a nivel básico. El estudiante utiliza herramientas de matemática básica, análisis matemático y álgebra lineal, aprendidas en los cursos anteriores, relacionándolas con los nuevos conceptos que adquiere en esta asignatura.
+            </p>
         </section>
 
         <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
@@ -57,20 +54,16 @@ esta asignatura.
                 <div class="electivos-semestre">
                     <h3 class="electivos-titulo">Fundamentos de Ecuaciones Diferenciales Ordinarias</h3>
                     <ul class="lista">
-                        <li><strong>Existencia y Unicidad:</strong> existencia y unicidad de
-soluciones: El problema de Cauchy. Teoremas de Picard y Peano. Soluciones máximas. 
-</li>
-                        <li><strong>Sistemas y Dependencia Continua:</strong> sistemas y ecuaciones de orden superior.
-Dependencia de las soluciones respecto de las condiciones iniciales y de los coeficientes.</li>
-                        <li><strong>Sistemas Lineales:</strong> sistemas lineales. Matriz fundamental canónica. Ecuaciones
-lineales con coeficientes constantes. Ecuaciones con coeficientes periódicos.</li>
+                        <li><strong>Existencia y Unicidad:</strong> Existencia y unicidad de soluciones: El problema de Cauchy. Teoremas de Picard y Peano. Soluciones máximas.</li>
+                        <li><strong>Sistemas y Dependencia Continua:</strong> Sistemas y ecuaciones de orden superior. Dependencia de las soluciones respecto de las condiciones iniciales y de los coeficientes.</li>
+                        <li><strong>Sistemas Lineales:</strong> Sistemas lineales. Matriz fundamental canónica. Ecuaciones lineales con coeficientes constantes. Ecuaciones con coeficientes periódicos.</li>
                     </ul>
                 </div>
                 <div class="electivos-semestre">
-                    <h3 class="electivos-titulo"> Dinámica No Lineal y Oscilaciones</h3>
+                    <h3 class="electivos-titulo">Dinámica No Lineal y Oscilaciones</h3>
                     <ul class="lista">
-                        <li><strong>Sistemas Planos y Equivalencia topológica:</strong> Sistemas autónomos de 2° orden, sistemas equivalentes, sistemas hiperbólicos y Teorema de Hartman-Grobman.</li>
-                        <li><strong>Estabilidad y Oscilaciones No Lineales:</strong> Puntos críticos y estabilidad en sistemas autónomosde 2° orden, Sistemas exactos.</li>
+                        <li><strong>Sistemas Planos y Equivalencia topológica:</strong> Sistemas autónomos de 2° orden, sistemas equivalentes, sistemas hiperbólicos y Teorema de Hartman-Grobman. </li>
+                        <li><strong>Estabilidad y Oscilaciones No Lineales:</strong> Puntos críticos y estabilidad en sistemas autónomos de 2° orden, Sistemas exactos. </li>
                     </ul>
                 </div>
             </div>
@@ -87,15 +80,12 @@ lineales con coeficientes constantes. Ecuaciones con coeficientes periódicos.</
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📐</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Bases Sólidas</h4>
-                    <p style="font-size: 0.9em; color: #555;">Es fundamental manejar bien los conceptos de Matemática III,Introduccion a la matematica avanzada y de Algebra lineal especialmente las ecuaciones diferencales ordinarias aunque se aplica más teoria en esta asignatura.</p>
+                    <p style="font-size: 0.9em; color: #555;">Es fundamental manejar bien los conceptos de Matemática III, Introducción a la Matemática Avanzada y de Álgebra Lineal, especialmente las ecuaciones diferenciales ordinarias, aunque se aplica más teoría en esta asignatura.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📖</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Bibliografía</h4>
-                    <p style="font-size: 0.9em; color: #555;">El texto guía es Barreira L. & Valls C. (2012). Ordinary Differential
-Equations, pero el Hirsch, M.W., Smale, S. & Devaney, R. L. (2013) Differential
-Equations, Dynamical Systems, and an Introduction to
-Chaos (3a ed.). es una excelente alternativa para profundizar en la teoría.</p>
+                    <p style="font-size: 0.9em; color: #555;">El texto guía es Barreira L. & Valls C. (2012) <em>Ordinary Differential Equations</em>, pero el Hirsch, M.W., Smale, S. & Devaney, R. L. (2013) <em>Differential Equations, Dynamical Systems, and an Introduction to Chaos</em> (3a ed.) es una excelente alternativa para profundizar en la teoría.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📝</span>
@@ -130,15 +120,18 @@ Chaos (3a ed.). es una excelente alternativa para profundizar en la teoría.</p>
                                 <span style="color: #666;"><strong>Ayudante:</strong> </span>
                             </div>
                         </div>
-        
+                    </div>
+                    
+                    <div style="display: grid; gap: 10px;">
                         <div style="background: white; border: 1px solid #eaeaea; padding: 15px; border-radius: 8px; display: flex; flex-direction: column; gap: 8px;">
                             <strong style="color: #333; border-bottom: 1px solid #eee; padding-bottom: 5px; width: fit-content;">2022.2</strong>
                             <div style="display: flex; gap: 25px; flex-wrap: wrap; font-size: 0.95em;">
-                               <span style="color: #666;"><strong>Profesor:</strong> Alexis Aderian Fuentes </span>
-                               <span style="color: #666;"><strong>Ayudante:</strong> </span>
+                                <span style="color: #666;"><strong>Profesor:</strong> Alexis Aderian Fuentes </span>
+                                <span style="color: #666;"><strong>Ayudante:</strong> </span>
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </section>
@@ -158,7 +151,7 @@ Chaos (3a ed.). es una excelente alternativa para profundizar en la teoría.</p>
         </section>
 
         <div class="section-VerMas" style="margin-top: 50px;">
-            <a href="../../Lineas de investigacion/Sist-Din.html">Volver a Sistemas Dinámicos.</a>
+            <a href="../../Lineas de investigacion/Sist-Din.html">Volver a Sistemas Dinámicos</a>
         </div>
     </div>
 </main>
